--- a/src/assets/font/iconfont.css
+++ b/src/assets/font/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 4136263 */
-  src: url('iconfont.woff2?t=1688287908415') format('woff2'),
-       url('iconfont.woff?t=1688287908415') format('woff'),
-       url('iconfont.ttf?t=1688287908415') format('truetype');
+  src: url('iconfont.woff2?t=1688986839787') format('woff2'),
+       url('iconfont.woff?t=1688986839787') format('woff'),
+       url('iconfont.ttf?t=1688986839787') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,22 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-duihaoyuan:before {
+  content: "\e65e";
+}
+
+.icon-youxiasanjiao:before {
+  content: "\e63e";
+}
+
+.icon-sousuo:before {
+  content: "\e60f";
+}
+
+.icon-spiritling-dingwei:before {
+  content: "\e602";
 }
 
 .icon-dingwei:before {
